Code/Services, Load Balancing, Networking/Ingress/TLS/2/Ingress_2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - target.lab.com
    secretName: tls-secret
  rules:
  - host: target.lab.com
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-app
          servicePort: 8080
